--- a/main.html
+++ b/main.html
@@ -8,6 +8,18 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<div class="holder">
+		<div>Box 1</div>
+		<div>Box 2</div>
+		<div>Box 3</div>
+		<div>Box 4</div>
+		<div>Box 5</div>
+		<div>Box 6</div>
+		<div>Box 7</div>
+		<div>Box 8</div>
+		<div>Box 9</div>
+		<div>Box 10</div>
+	</div>
     <script type="text/javascript" src="./script.js">
 </script>
 
