--- a/main.html
+++ b/main.html
@@ -9,16 +9,14 @@
 <body>
 	<!-- the entire body must be written by student -->
 	<div class="holder">
-		<div>Box 1</div>
-		<div>Box 2</div>
-		<div>Box 3</div>
-		<div>Box 4</div>
-		<div>Box 5</div>
-		<div>Box 6</div>
-		<div>Box 7</div>
-		<div>Box 8</div>
-		<div>Box 9</div>
-		<div>Box 10</div>
+		<div class="box">Box 1</div>
+		<div class="box">Box 2</div>
+		<div class="box">Box 3</div>
+		<div class="box">Box 4</div>
+		<div class="box">Box 5</div>
+		<div class="box">Box 6</div>
+		<div class="box">Box 7</div>
+		<div class="box">Box 8</div>
 	</div>
     <script type="text/javascript" src="./script.js">
 </script>
